src/test/deca/context/invalid/Obj/select-type.deca
// Description:
//    Selection d'un champ ou d'une méthode d'un type
//
// Résultat:
//On ne peut appeler un champ d'un objetqui n'est pas une classe
//
{
    int a = boolean.x;
}